# fastapi-cicd-pipeline-k8s

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pipeline_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
fast_api_app/: api_routes.py  app.py  db.py  models.py  page_routes.py  populate_db.sql
helm-db/: values.yaml
helm-fastapi/: values.yaml
helm/db/: Chart.yaml
helm/fastapi/: Chart.yaml  values.yaml
helm/fastapi/templates/: deployment.yaml
helm/roles/: clusterrolebinding.yaml  configmap.yaml
selenium/: selenium_test.py
static/css/: styles.css
static/html/: add_book.html  index.html  view_edit_book.html
static/js/: add_book.js  edit_book.js  main.js
tests/: test_api_routes.py  test_integration.py
